# autoloop

./: .gitignore  CANONICAL-BASELINE.md  CHANGELOG.md  MANIFEST.in  README.md  SKILL.md  TODO.md  autoloop-findings.md  autoloop-plan.md  autoloop-progress.md  pyproject.toml  setup.py
.context/: codex-session-id
assets/: audit-template.md  checkpoint-schema.json  delivery-template.md  findings-template.md  plan-template.md  progress-template.md  report-template.md
commands/: autoloop-compare.md  autoloop-deliver.md  autoloop-design.md  autoloop-generate.md  autoloop-iterate.md  autoloop-optimize.md  autoloop-pipeline.md  autoloop-plan.md  autoloop-quality.md  autoloop-research.md  autoloop.md
compare/: SKILL.md
deliver/: SKILL.md
docs/: AutoLoop-Automation-Breakpoint-Analysis-and-Controller-Plan-2026-03-28.md  AutoLoop-Codex-Review-R8-Six-Dimension-Methodology-Review-2026-03-28.md  AutoLoop-Codex-Review-R9-Six-Dimension-Methodology-Follow-Up-2026-03-28.md  AutoLoop-Codex评审R8-六维度方法论评审-2026-03-28.md  AutoLoop-Codex评审R9-六维度方法论复审-2026-03-28.md  AutoLoop-R8-Review-Remediation-Plan-2026-03-28.md  AutoLoop-R8评审修复方案-2026-03-28.md  AutoLoop-Skill-Standardization-Improvement-Framework-2026-03-28.md  AutoLoop-Skill标准化改进框架-2026-03-28.md  AutoLoop-T3-Iteration-Final-Report-2026-03-28.md  AutoLoop-T3迭代最终报告-2026-03-28.md  AutoLoop-自动化断点分析与控制器方案-2026-03-28.md  RELEASING.md  RUNNER.md  SECURITY.md  TECH_DEBT.md  backlog-experience-v2.md  codex-review-prompt.md  mcp-cli-parity.md  schema-validate-map.md
examples/: minimal-state.json
generate/: SKILL.md
iterate/: SKILL.md
(+102 files in other folders)
